@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: cupsaddsmb.man,v 1.1 2001/09/18 19:14:47 mike Exp $"
+.\" "$Id: cupsaddsmb.man,v 1.2 2001/11/09 17:19:41 mike Exp $"
 .\"
 .\"   cupsaddsmb man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -21,15 +21,19 @@
 .\"       EMail: cups-info@cups.org
 .\"         WWW: http://www.cups.org
 .\"
-.TH cupsaddsmb 8 "Common UNIX Printing System" "18 September 2001" "Easy Software Products"
+.TH cupsaddsmb 8 "Common UNIX Printing System" "9 November 2001" "Easy Software Products"
 .SH NAME
 cupsaddsmb \- export printers to samba for windows clients
 .SH SYNOPSIS
 .B cupsaddsmb
-[ -a ]
+[ -a ] [ -U
+.I user
+] [ -v ]
 .br
 .B cupsaddsmb
-[ printer1 ... printerN ]
+[ -u
+.I user
+] [ -v ] [ printer1 ... printerN ]
 .SH DESCRIPTION
 \fIcupsaddsmb\fR exports printers to the SAMBA software (version
 2.2.0 or higher) for use with Windows clients. Depending on the
@@ -39,6 +43,12 @@ printer driver files described below.
 .LP
 The \fI-a\fR option exports all known printers. Otherwise, only
 the named printers are exported.
+.LP
+The \fI-U\fR option specifies the print admin username which defaults
+to your current username.
+.LP
+The \fI-v\fR option specifies that verbose information should be
+shown and is useful for debugging SAMBA configuration problems.
 .SH SAMBA CONFIGURATION
 \fIcupsaddsmb\fR uses the new RPC-based printing support in
 SAMBA 2.2.x to provide printer drivers and PPD files to Windows
@@ -100,5 +110,5 @@ http://localhost:631/documentation.html
 .SH COPYRIGHT
 Copyright 1993-2001 by Easy Software Products, All Rights Reserved.
 .\"
-.\" End of "$Id: cupsaddsmb.man,v 1.1 2001/09/18 19:14:47 mike Exp $".
+.\" End of "$Id: cupsaddsmb.man,v 1.2 2001/11/09 17:19:41 mike Exp $".
 .\"
